default/objects/NVMContactWorld__Background_Action__c/NVMContactWorld__Background_Action__c.object-meta.xml
<CustomObject>
    <label>Background Action</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Background Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>