default/objects/NVMContactWorld__Background_Action__c/fields/NVMContactWorld__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Action_Type__c</fullName>
    <label>Action Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>