default/objects/NVMContactWorld__Background_Action__c/fields/NVMContactWorld__Failed__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Error flag set to prevent problem jobs blocking the queue</description>
    <label>Failed</label>
    <type>Checkbox</type>
</CustomField>