default/objects/NVMContactWorld__Background_Action__c/fields/NVMContactWorld__Key__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Key__c</fullName>
    <description>Search Key for use in grouping similar actions</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>