default/objects/NVMContactWorld__Background_Action__c/fields/NVMContactWorld__Params__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Params__c</fullName>
    <label>Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>