default/objects/NVMContactWorld__Background_Action__c/fields/NVMContactWorld__Status__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>