default/objects/NVMContactWorld__Background_Action__c/fields/NVMContactWorld__When__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__When__c</fullName>
    <label>When</label>
    <type>DateTime</type>
</CustomField>