default/objects/NVMContactWorld__Background_Action__c/listViews/NVMContactWorld__All.listView-meta.xml
<ListView>
    <fullName>NVMContactWorld__All</fullName>
    <columns>NAME</columns>
    <columns>NVMContactWorld__Action_Type__c</columns>
    <columns>NVMContactWorld__Failed__c</columns>
    <columns>NVMContactWorld__Params__c</columns>
    <columns>NVMContactWorld__When__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NVMContactWorld__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>