default/objects/NVMContactWorld__Background_Action__c/listViews/NVMContactWorld__All1.listView-meta.xml
<ListView>
    <fullName>NVMContactWorld__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>